--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nativewind",
+  "name": "nativewind-test",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,14 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.1",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
+    "nativewind": "^2.0.11",
+    "phosphor-react-native": "^1.1.2",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-hook-form": "^7.45.2",
+    "react-native": "0.71.8",
+    "react-native-svg": "13.4.0",
+    "tailwindcss": "3.3.2",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@rocketseat/eslint-config": "^2.1.0",
     "@types/react": "~18.0.14",
+    "eslint": "^8.45.0",
+    "prettier-plugin-tailwindcss": "^0.4.1",
+    "react-native-svg-transformer": "^1.1.0",
     "typescript": "^4.9.4"
   },
   "private": true
